--- a/Dockerfile.oss
+++ b/Dockerfile.oss
@@ -12,7 +12,7 @@ ENV PROXY_CACHE_VALID_OK "1h"
 ENV PROXY_CACHE_VALID_NOTFOUND "1m"
 ENV PROXY_CACHE_VALID_FORBIDDEN "30s"
 
-# Cors env vars
+# CORS env vars
 ENV CORS_ENABLED 0
 ENV CORS_ALLOW_PRIVATE_NETWORK_ACCESS ""
 
