--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,12 +7,21 @@ updates:
       interval: weekly
       day: monday
       time: "00:00"
+
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: weekly
       day: monday
       time: "00:00"
+    groups:
+      docker-github-actions:
+        patterns:
+          - docker/*
+      official-github-actions:
+        patterns:
+          - actions/*
+
   - package-ecosystem: npm
     directory: /
     schedule:
