--- a/Dockerfile.plus
+++ b/Dockerfile.plus
@@ -1,8 +1,8 @@
-ARG RELEASE=bookworm
-FROM debian:${RELEASE}-slim@sha256:f528891ab1aa484bf7233dbcc84f3c806c3e427571d75510a9d74bb5ec535b33
+# ARG RELEASE=bookworm # Removing for the time being since it doesn't play well with Dependabot
+FROM debian:bookworm-slim@sha256:f528891ab1aa484bf7233dbcc84f3c806c3e427571d75510a9d74bb5ec535b33
 
-# Persist RELEASE argument
-ARG RELEASE
+# Create RELEASE argument
+ARG RELEASE=bookworm
 
 # NJS env vars
 ENV NGINX_VERSION=32
