--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -15,9 +15,9 @@ body:
 
         **Note:** If you are seeking community support or have a question, please consider starting a new thread via [GitHub discussions][discussions] or the [NGINX Community forum][forum].
 
-        [issue search]: ../search?q=is%3Aissue&type=issues
+        [issue search]: https://github.com/nginx/nginx-s3-gateway/issues
 
-        [discussions]: ../discussions
+        [discussions]: https://github.com/nginx/nginx-s3-gateway/discussions
         [forum]: https://community.nginx.org
 
   - type: textarea
