--- a/.github/workflows/ossf_scorecard.yml
+++ b/.github/workflows/ossf_scorecard.yml
@@ -8,7 +8,7 @@ on:
   schedule:
     - cron: "0 0 * * 1"
   push:
-    branches: [main, master]
+    branches: [main]
   workflow_dispatch:
 # Declare default permissions as read only.
 permissions: read-all
@@ -16,19 +16,11 @@ jobs:
   analysis:
     name: Scorecard analysis
     runs-on: ubuntu-24.04
-    # Delete the conditional below if you are using the OSSF Scorecard on a private repository.
-    if: ${{ github.event.repository.private == false }}
     permissions:
       # Needed if using Code Scanning alerts.
       security-events: write
       # Needed for GitHub OIDC token if publish_results is true.
       id-token: write
-      # Uncomment the permissions below if you are using the OSSF Scorecard on a private repository.
-      # contents: read
-      # actions: read
-      # issues: read # To allow GraphQL ListCommits to work
-      # pull-requests: read # To allow GraphQL ListCommits to work
-      # checks: read # To detect SAST tools
     steps:
       - name: Check out the codebase
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -40,10 +32,6 @@ jobs:
         with:
           results_file: results.sarif
           results_format: sarif
-          # (Optional) fine-grained personal access token. Uncomment the `repo_token` line below if you want to enable the Branch-Protection or Webhooks check on a *private* repository.
-          # To create the PAT, follow the steps in https://github.com/ossf/scorecard-action#authentication-with-fine-grained-pat-optional.
-          # repo_token: ${{ secrets.SCORECARD_TOKEN }}
-
           # Publish the results for public repositories to enable scorecard badges. For more details, see https://github.com/ossf/scorecard-action#publishing-results.
           # For private repositories, `publish_results` will automatically be set to `false`, regardless of the value entered here.
           publish_results: true
