--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -33,7 +33,7 @@ body:
     attributes:
       label: Expected Behavior
       description: A clear and concise description of what you expected to happen.
-      placeholder: When I do "X", I expect "Z" to happen.
+      placeholder: When I do "X" with the NGINX S3 gateway, I expect "Z" to happen.
     validations:
       required: true
 
