--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -55,7 +55,7 @@ body:
         - Version of the S3 container used: [DockerHub/GCR]
         - Commit/Tag (if building the NGINX S3 gateway from source):
         - Version of NGINX Open Source or NGINX Plus: [OSS/Plus]
-        - Version of NGINX JavaScript:
+        - Version of NGINX JavaScript: [0.8.8/0.8.7/etc...]
         - Target deployment platforms [e.g. AWS/GCP/local cluster/etc...]:
         - S3 backend implementation: [e.g. AWS, Ceph, NetApp StorageGrid, etc...]
         - Authentication method: [IAM, IAM with Fargate, IAM with K8S, AWS Credentials, etc...]
